<resources>
    <string name="app_name" translatable="false">Babble</string>
    <string name="sign_out" translatable="false">Sign out</string>
    <string name="delete_account" translatable="false">Delete Account</string>
    <string name="message_prompt" translatable="false">Enter Message</string>
    <string name="add_task_button" translatable="false">Add Task</string>
    <string name="title_activity_todo" translatable="false">TodoActivity</string>
    <string name="todo_description" translatable="false">Create A Task To Be Done</string>
    <string name="claim_task_button" translatable="false">Claim Task</string>
    <string name="completed_task_button" translatable="false">Completed Task</string>
    <string name="title_activity_item_detail" translatable="false">ItemDetail</string>
    <string name="channel_name" translatable="false">Message Notification</string>
    <string name="channel_description" translatable="false">Notifies you when you receive a message</string>
    <string name="add_group_button" translatable="false">Add Group</string>
    <string name="add_people_prompt" translatable="false">Enter a friend\'s e-mail address</string>
    <string name="add_group_prompt" translatable="false">Enter a name for your Bubble</string>
    <string name="delete_group" translatable="false">Leave Group</string>
    <string name="add_user_prompt" translatable="false">Add a friend to your Bubble</string>
    <string name="add_user_email_prompt" translatable="false">Enter their email</string>
    <string name="add_user" translatable="false">Add Friend</string>
    <string name="add_friend_button" translatable="false">Add Friend</string>
    <string name="legal" translatable="false">Legal</string>
    <string name="legal_info" translatable="false"><b>Babble Open Source Chat App</b>\n\n<b>Copyright (C) 2019 Vedant K</b>\n\n<b>Privacy Policy</b>\nThe privacy policy for the app Babble can be found <a href="https://github.com/gamemaker1/Babble/blob/master/privacy.md">here</a>.\n\n<b>Terms Of Service</b>\nThe terms of service for the app Babble can be found <a href="https://github.com/gamemaker1/Babble/blob/master/termsofservice.md">here</a>.\n\n<b>Source Code Licensing</b>\nThe source code and its license for the app Babble can be found <a href="https://github.com/gamemaker1/Babble">here</a>.\n\n<b>Icons and Images</b>\nThe application icon was designed by <a href="https://www.freepik.com/home">Freepik</a> from <a href="www.flaticon.com">Flaticon</a>.\nVarious small icons are from <a href="www.thenounproject.com">The Noun Project</a>.\nColours were chosen using the help of the <a href="www.material.io/tools/color/">Material Design - Colour Picker</a>\n\n</string>
    <string name="group_info" translatable="false">Group Info</string>
    <string name="default_notification_channel_id" translatable="false">babbling_bubble</string>
    <string name="choose_type" translatable="false">Choose to add it as a todo or send it as a message -</string>
    <string name="add_todo" translatable="false">Add as Todo</string>
    <string name="add_as_message" translatable="false">Send as a message</string>
    <string name="group_question" translatable="false">Choose the group to send it to</string>
    <string name="group_name_placeholder" translatable="false"><u>Group Name</u></string>
</resources>
