<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/add_user" app:showAsAction="never"
        android:id="@+id/menu_add_member"/>
    <item android:title="@string/group_info" app:showAsAction="never"
        android:id="@+id/menu_group_info" />
    <!--<item android:title="@string/delete_group" app:showAsAction="never"
        android:id="@+id/menu_delete_group"/>-->
    <item android:id="@+id/menu_sign_out" app:showAsAction="never"
        android:title="@string/sign_out" />
    <item android:title="@string/delete_account" app:showAsAction="never"
        android:id="@+id/menu_delete_account"/>
    <item android:title="@string/legal" app:showAsAction="never"
        android:id="@+id/legal"/>

</menu>